Grace/tests/gibbs/errors/t304.grace
// ERROR = P1018
method print(a)and(*b) {}

print("Apples")and(.)
